2008-05-25 [wwp]	0.5.0cvs16

	* po/fr.po
		Completed FR translation.

	* src/archiver.c
	* src/archiver_gtk.c
		Fix product name and completed plugin description.

2008-05-25 [michael]	0.5.0cvs15

	* src/archiver_gtk.c
	* src/libarchive_archive.c
    archiver_gtk.c: prevent UTF-8 blurp by not printing uninitialized
	strings with debug_print.
	libarchive_archive.c: Fixed a race condition. Freeing globat GSList
	while at the same time working on a reference to the list is bad
	carma. Ensuring elem->data is nullified and testing for this condition
	solves the problem.

2008-05-25 [wwp]	0.5.0cvs14

	* configure.ac
	* po/.cvsignore
	* po/POTFILES.in
	* po/fr.po
		Added preliminary fr translation, completed POTFILES,
		more tmp/generated files to ignore.

2008-05-25 [colin]	0.5.0cvs13

	* ChangeLog
		Reformat

2008-05-25 [wwp]	0.5.0cvs12

	* src/archiver.c
		Better English and punctuation, use proper product
		name and complete the list of supported folder types.

2008-05-25 [wwp]	0.5.0cvs11

	* PATCHSETS
		Added missing PATCHSETS file (to complete).

2008-05-25 [paul]	0.5.0cvs10

	* ChangeLog
	* po/POTFILES.in
	* src/Makefile.am
	* src/archiver.c
	* src/archiver_gtk.c
	* src/archiver_prefs.c
	* src/archiver_prefs.h
	* src/gettext.h
		add a Prefs page
		complete gettextization

2008-05-25 [wwp]	0.5.0cvs9

	* .cvsignore
	* po/.cvsignore
		More generated files to ignore.

2008-05-24 [michael]	0.5.0cvs8

	* .cvsignore
	* src/archiver_gtk.c
	* src/libarchive_archive.c
		- Added progress_bar_pulse when scanning folders
		- Added information about MD5 to the result dialog
		- Counter use to activate GTK_EVENTS_FLUSH was never 
		  incrimented
		- Reduced debug noise by eliminating some debug_print 
		  which is of little interest
		- Added more GTK_IS_WIDGET test to prevent errors due 
		  to user canceling action. Progress widget could be 
		  destroyed before the archive_create function was notified.
		- Fixing small potential memory leaks.

2008-05-24 [paul]	0.5.0cvs7
