@@ -1,3 +1,9 @@
+2008-05-25 [michael]	0.5.0cvs17
+
+	* src/archiver.c
+	* src/archiver_gtk.c
+    Some cleaning up mostly to ensure it compiles on gcc-2.9x.
+
 2008-05-25 [wwp]	0.5.0cvs16
 
 	* po/fr.po
